syntax = "proto3";

option go_package = "github.com/BrayanAriasH/go_proto3_example/cmd/app/hello";
package hello;

message HelloRequest{
  string name = 1;
  int32 age = 2;
}

message HelloResponse{
  string greeting = 1;
}


service Greeter {
  rpc SayHello (HelloRequest) returns (HelloResponse);
  rpc HelloEveryOne(HelloRequest) returns (stream HelloResponse);
}
